# Spaces

./: .gitignore  BUILD_TEST_REPORT.md  CHANGELOG.md  CMakeLists.txt  FILE_EXECUTION.md  FINAL_REPORT.md  ICON_FIX_ANALYSIS.md  ICON_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MIGRATION_COMPLETE.md  MIGRATION_REPORT.md  PHASE_1.md  PHASE_2.md  PHASE_2_ROADMAP.md  PHASE_M1_COMPLETION.md  QUICK_START.md  README.md  RELEASE_1.01.001.md  RELEASE_1.01.002.md  RELEASE_1.01.003.md  RELEASE_1.01.004.md  RELEASE_1.01.010.md  RESTORATION.md  Spaces-MultiRoot.code-workspace  TESTING.md  TODO.md  VERIFICATION_REPORT.md  debug-monitor.ps1  test_icons.bat
.github/: FUNDING.yml  copilot-instructions.md
IVOEFences/: CMakeLists.txt  README.md
IVOEFences/build-vs18/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  IVOEFences.sln  IVOEFences.vcxproj  IVOEFences.vcxproj.filters  IVOEFencesIntegrationTests.vcxproj  IVOEFencesIntegrationTests.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  UserActionHelper.vcxproj  UserActionHelper.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
IVOEFences/src/: App.cpp  App.h  AppPaths.h  AppVersion.h  DesktopItemService.cpp  DesktopItemService.h  DesktopWatcher.cpp  DesktopWatcher.h  FenceLayoutEngine.cpp  FenceLayoutEngine.h  FenceManager.cpp  FenceManager.h  FenceModels.h  FenceRepository.cpp  FenceRepository.h  FenceSelectionModel.h  FenceWindow.cpp  FenceWindow.h  JsonPersistence.cpp  TrayIcon.cpp  TrayIcon.h  UserActionHelperMain.cpp  Utils.h  ZOrderCoordinator.cpp
IVOEFences/tests/: IntegrationTests.cpp
IVOESpaces/: CMakeLists.txt
IVOESpaces/src/: App.cpp  App.h  AppPaths.cpp  AppPaths.h  DesktopItemService.cpp  DesktopItemService.h  JsonPersistence.h  PathMove.cpp  PathMove.h  ShellChangeWatcher.cpp  ShellChangeWatcher.h  ShellDesktop.cpp  ShellDesktop.h  SpaceLayoutEngine.cpp  SpaceLayoutEngine.h  SpaceManager.cpp  SpaceManager.h  SpaceModels.h  SpaceRepository.cpp  SpaceRepository.h  SpaceSelectionModel.cpp  SpaceSelectionModel.h  SpaceWindow.cpp  SpaceWindow.h  TrayIcon.cpp  TrayIcon.h  UserIntegrityLauncher.cpp  ZOrderCoordinator.cpp  ZOrderCoordinator.h  resource.h
IVOESpaces/src/core/: AppHost.h  CommandRegistry.h  DesktopItemBroker.h  DragDropController.h  PluginManager.h  SettingsStore.h  ShellIntegration.h  SpaceManager.h
IVOESpaces/src/sdk/: IHostApi.h  IServices.h  PluginManifest.h
IVOESpaces/src/shellintegration/: ShellIntegration.cpp  ShellIntegration.h
IVOESpaces/tests/: IntegrationTests.cpp
csharp-advanced/: IVOEFences.slnx  IVOESpaces.slnx
docs/: EXTENSIBILITY.md  GITHUB_ISSUE_SEED.md  ISSUE_BATCH_1.md  MANUAL_RUNTIME_SMOKE_TEST.md  MANUAL_SETTINGS_PERSISTENCE_CHECKLIST.md  MANUAL_THEME_VERIFICATION.md  PLUGIN_MARKETPLACE_ARCHITECTURE.md  PROJECT_BOARD_SETUP.md  PUBLIC_THEME_AUTHORING.md  RELEASE_AUTOMATED_CHECKLIST.md  ROADMAP_MILESTONES_2026.md  Run-ManualSmoke.ps1  THEME_CONTRACT.md  THEME_MANUAL_CHECK_ARTIFACT.md  THEME_SYSTEM_DESIGN.md  TRAY_ICON_RELIABILITY_CHECKLIST.md  TRAY_ICON_RELIABILITY_STRATEGY.md  architecture.md  default-icon-map.tabler.json  diagnostics.md  import-export.md  overview.md  plugin-system.md  recovery.md  settings-system.md  themes.md  ui-selector.contract.json
docs/wiki/: Architecture.md  Build-and-Test.md  Debugging-and-Troubleshooting.md  Home.md  New-Solution-Playbook.md  Plugin-Development-Deep-Dive.md  Plugin-Quickstart.md  Plugins-and-Themes.md  Release-Workflow.md  Settings-and-Persistence.md  Wiki-Publish-Guide.md  _Sidebar.md
installer/: README.md  Spaces.iss
installer/assets/: plugin-catalog.json
plugin-hub/: README.md
publish-20260331-143243/IVOEFences-0.0.005/: CMakeLists.txt  README.md
publish-20260331-143243/IVOEFences-0.0.005/src/: App.cpp  App.h  AppPaths.cpp  AppVersion.h  DesktopItemService.cpp  DesktopItemService.h  DesktopWatcher.cpp  DesktopWatcher.h  FenceManager.cpp  FenceManager.h  FenceModels.h  FenceRepository.cpp  FenceSelectionModel.cpp  FenceWindow.cpp  FenceWindow.h  ShellChangeWatcher.cpp  ShellChangeWatcher.h  TrayIcon.cpp  UserIntegrityLauncher.h  ZOrderCoordinator.h  main.cpp
publish-20260331-143243/IVOEFences-0.0.005/src/core/: DragDropController.h  FenceManager.h
scripts/: release-checklist.ps1
src/: App.cpp  App.h  AppResources.h  AppVersion.h  FenceManager.cpp  FenceManager.h  FenceStorage.cpp  FenceStorage.h  FenceWindow.cpp  FenceWindow.h  Models.h  Persistence.cpp  Persistence.h  SpaceManager.cpp  SpaceManager.h  SpaceStorage.cpp  SpaceStorage.h  SpaceWindow.cpp  SpaceWindow.h  Spaces.rc  TrayMenu.cpp  TrayMenu.h  Win32Helpers.cpp  Win32Helpers.h  main.cpp
src/core/: AppKernel.cpp  AppKernel.h  CommandDispatcher.cpp  CommandDispatcher.h  Diagnostics.cpp  Diagnostics.h  EventBus.cpp  EventBus.h  KernelViews.h  PluginAppearanceConflictGuard.cpp  PluginAppearanceConflictGuard.h  PluginCatalogFetcher.cpp  PluginCatalogFetcher.h  PluginHubSync.cpp  PluginHubSync.h  PluginPackageInstaller.cpp  PluginPackageInstaller.h  ServiceRegistry.cpp  ServiceRegistry.h  SettingsStore.cpp  SettingsStore.h  ThemeApplyPipeline.cpp  ThemeApplyPipeline.h  ThemeMigrationService.cpp  ThemeMigrationService.h  ThemePackageLoader.cpp  ThemePackageLoader.h  ThemePackageValidator.cpp  ThemePackageValidator.h  ThemePlatform.cpp  ThemePlatform.h  ThemeResourceResolver.cpp  ThemeResourceResolver.h  ThemeTokenResolver.cpp  ThemeTokenResolver.h  UniversalThemeLoader.cpp  UniversalThemeLoader.h
src/extensions/: FenceExtensionRegistry.cpp  FenceExtensionRegistry.h  MenuContributionRegistry.cpp  MenuContributionRegistry.h  PluginContracts.h  PluginHost.cpp  PluginHost.h  PluginRegistry.cpp  PluginRegistry.h  PluginSettingsRegistry.cpp  PluginSettingsRegistry.h  SettingsSchema.h  (+2 more)
tests/: HostCoreTests.cpp  SettingsPersistenceTest.ps1
(+499 files in other folders)
